force-app/main/default/objects/Document_To_Object_Mapping__mdt/Document_To_Object_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Contains mappings for milestone documents that are linked to other objects such as Site object fields. 
Milestone is not necessarily linked to the site field but will change a value on that field</description>
    <label>Document To Object Mapping</label>
    <pluralLabel>Document To Object Mappings</pluralLabel>
</CustomObject>