force-app/main/default/objects/Document_To_Object_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this box to enable/disable this configuration</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>