force-app/main/default/objects/Document_To_Object_Mapping__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <inlineHelpText>Enter the Field API Name for the object listed in Object Type where we will store the Id value of this document</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>