force-app/main/default/objects/Document_To_Object_Mapping__mdt/fields/Milestone_WBS_Code__c.field-meta.xml
<CustomField>
    <fullName>Milestone_WBS_Code__c</fullName>
    <inlineHelpText>Enter the WBS Code for the Milestone that the document will be uploaded to</inlineHelpText>
    <label>Milestone WBS Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>