force-app/main/default/objects/Document_To_Object_Mapping__mdt/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <inlineHelpText>Enter the Object API Name that the remote field will exist on</inlineHelpText>
    <label>Object Type</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>