force-app/main/default/objects/Document_To_Object_Mapping__mdt/fields/Project_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Template_ID__c</fullName>
    <inlineHelpText>Enter the Id of the project template that this configuration will apply to</inlineHelpText>
    <label>Project Template ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>